Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Idm tools</h1>
-      <h2 class="project-tagline">Those code aims to clean IDM DOWNLOAD temps with Python</h2>
+      <h2 class="project-tagline">An IDM Downloads tool to enhance some basic features.</h2>
       <a href="https://github.com/guijianchou/IDM_Tools" class="btn">View on GitHub</a>
       <a href="https://github.com/guijianchou/IDM_Tools/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/guijianchou/IDM_Tools/tarball/master" class="btn">Download .tar.gz</a>
@@ -53,7 +53,7 @@ issues<br>
 1. delete temp will clean those not download complete as well<br>
 2. after delete, user file dictionary recreat maybe effect something next version<br>
 1. use some function bypass files not downloads completed (os.rmdir)<br>
-2. cut downloads file to some special own dolder                                     </p>
+2. remove downloads file to some special own file folder                                     </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/guijianchou/IDM_Tools">Idm tools</a> is maintained by <a href="https://github.com/guijianchou">guijianchou</a>.</span>
